Add basic function and variable framework

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     
 
     <script>
-        
+        function getComputerChoice(){
+
+        }
+        function playRound(playerSelection, computerSelection){
+
+        }
+
+        const playerSelection = ;
+        const computerSelection = getComputerChoice();
+
+        console.log(playround(playerSelection, computerSelection));
     </script>
 </body>
 </html>
