Add selection function for player and computer

--- a/index.html
+++ b/index.html
@@ -11,28 +11,53 @@
 
 
     <script>
-        let getComputerChoice = Math.floor(Math.random() * (3 - 1 + 1) + 1); {
-            if (getComputerChoice === 1) {
-                getComputerChoice = "Rock";
-            } else if (getComputerChoice === 2) {
-                getComputerChoice = "Paper";
-            } else {
-                getComputerChoice = "Scissors";
-            }
-        } 
 
+        let choices = ["rock", "paper", "scissors"];
+        
         const playerChoice = prompt("Do you choose Rock, Paper or Scissors?").toLocaleLowerCase();
         if (playerChoice === "paper" || playerChoice === "rock" || playerChoice === "scissors") {
             console.log("You chose " + playerChoice);
         } else {
-            alert("Error. Please try again.");
+            console.log("Error. Please try again.");
+        }
+
+        const getComputerChoice = choices[Math.floor(Math.random() * 3)];
+        console.log("Computer chose" + ` ${getComputerChoice}`);
+
+        if (getComputerChoice <= 0.33) {
+            getComputerChoice = "rock";
+        }
+        if (getComputerChoice >= 0.67) {
+            getComputerChoice = "paper";
+        }
+        if (getComputerChoice >= 0.66) {
+            getComputerChoice = "scissors";
         }
 
 
 
-        const computerSelection = getComputerChoice();
+        function declareWinner(getComputerChoice, playerChoice) {
+            if ((getComputerChoice === 'rock') && (playerChoice === "paper")) {
+                console.log("You win! Paper beats rock.");
+            } else if ((getComputerChoice === 'paper') && (playerChoice === "scissors")) {
+                console.log("You win! Scissors beat paper.");
+            } else if ((getComputerChoice === 'scissors') && (playerChoice === "rock")) {
+                console.log("You win! Rock beats scissors.");
+            } else if ((getComputerChoice === 'rock') && (playerChoice === "scissors")) {
+                console.log("You lose. Rock beats scissors.");
+            } else if ((getComputerChoice === 'scissors') && (playerChoice === "paper")) {
+                console.log("You lose. Scissors beat paper.");
+            } else if ((getComputerChoice === 'paper') && (playerChoice === "rock")) {
+                console.log("You lose. Paper beats rock.");
+            } else {
+                console.log("Its a draw!");
+            }
+        }
 
-        console.log(playround(playerSelection, computerSelection));
+        declareWinner();
+
+
+
     </script>
 </body>
 
