--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>
 
         let choices = ["rock", "paper", "scissors"];
-        
+
         const playerChoice = prompt("Do you choose Rock, Paper or Scissors?").toLocaleLowerCase();
         if (playerChoice === "paper" || playerChoice === "rock" || playerChoice === "scissors") {
             console.log("You chose " + playerChoice);
@@ -24,30 +24,19 @@
         const getComputerChoice = choices[Math.floor(Math.random() * 3)];
         console.log("Computer chose" + ` ${getComputerChoice}`);
 
-        if (getComputerChoice <= 0.33) {
-            getComputerChoice = "rock";
-        }
-        if (getComputerChoice >= 0.67) {
-            getComputerChoice = "paper";
-        }
-        if (getComputerChoice >= 0.66) {
-            getComputerChoice = "scissors";
-        }
-
-
 
         function declareWinner(getComputerChoice, playerChoice) {
-            if ((getComputerChoice === 'rock') && (playerChoice === "paper")) {
+            if ((getComputerChoice === "rock") && (playerChoice === "paper")) {
                 console.log("You win! Paper beats rock.");
-            } else if ((getComputerChoice === 'paper') && (playerChoice === "scissors")) {
+            } else if ((getComputerChoice === "paper") && (playerChoice === "scissors")) {
                 console.log("You win! Scissors beat paper.");
-            } else if ((getComputerChoice === 'scissors') && (playerChoice === "rock")) {
+            } else if ((getComputerChoice === "scissors") && (playerChoice === "rock")) {
                 console.log("You win! Rock beats scissors.");
-            } else if ((getComputerChoice === 'rock') && (playerChoice === "scissors")) {
+            } else if ((getComputerChoice === "rock") && (playerChoice === "scissors")) {
                 console.log("You lose. Rock beats scissors.");
-            } else if ((getComputerChoice === 'scissors') && (playerChoice === "paper")) {
+            } else if ((getComputerChoice === "scissors") && (playerChoice === "paper")) {
                 console.log("You lose. Scissors beat paper.");
-            } else if ((getComputerChoice === 'paper') && (playerChoice === "rock")) {
+            } else if ((getComputerChoice === "paper") && (playerChoice === "rock")) {
                 console.log("You lose. Paper beats rock.");
             } else {
                 console.log("Its a draw!");
