--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         const computerWins = "You lose! " + computerChoice + " beats " + playerChoice;
         const drawnGame = "Its a tie!";
         let gamesPlayed = 0;
+        let playerWinCount = 0;
+        let computerWinCount = 0;
 
 
         function playRound() {
@@ -35,19 +37,32 @@
                 || (playerChoice === 'paper' && computerChoice === 'rock')
                 || (playerChoice === 'scissors' && computerChoice === 'paper')) {
                 return playerWins;
+                playerWinCount ++;
             } else if
                 ((playerChoice === 'rock' && computerChoice === 'paper')
                 || (playerChoice === 'paper' && computerChoice === 'scissors')
                 || (playerChoice === 'scissors' && computerChoice === 'rock')) {
                 return computerWins;
+                computerWinCount ++;
             } else {
                 return drawnGame;
                 gamesPlayed ++;
-                console.log(gamesPlayed);
+                console.log(gamesPlayed + " games played.");
             }
         }
 
-        console.log(playRound());
+        while (gamesPlayed < 6) {
+            console.log(playRound());
+            console.log("You have won " + playerWinCount + " round(s).");
+            console.log("The computer has won " + computerWinCount + " round(s).")
+        } 
+        if (gamesplayed >= 5) {
+            if (playerWinCount > computerWinCount) {
+                console.log("You won by " + playerWinCount + " rounds to " + computerWinCount + "!");
+            }
+        }
+
+        
 
     </script>
 </body>
