Add buttons for play selections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <button id = "rock">Rock</button>
+    <button id = "paper">Paper</button>
+    <button id = "scissors">Scissors</button>
+
 
 
     <script>
@@ -15,6 +19,8 @@
         let playerWinCount = 0;
         let computerWinCount = 0;
         let drawnGameCount = 0;
+
+
 
         for (gamesPlayed = 0; gamesPlayed < 6; gamesPlayed++) {
 
