Comment out win messages and prompt

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         for (gamesPlayed = 0; gamesPlayed < 6; gamesPlayed++) {
 
-            let getPlayerChoice = prompt("Do you choose rock, paper or scissors?").toLocaleLowerCase()
+            //let getPlayerChoice = prompt("Do you choose rock, paper or scissors?").toLocaleLowerCase()
             if (getPlayerChoice == 'rock' || getPlayerChoice == 'scissors' || getPlayerChoice == 'paper') {
                 console.log("You chose " + getPlayerChoice);
             } else {
@@ -61,13 +61,13 @@
             console.log("The computer has won " + computerWinCount + " round(s).")
         }
 
-        if (playerWinCount > computerWinCount) {
+        /*if (playerWinCount > computerWinCount) {
             console.log("You won by " + playerWinCount + " rounds to " + computerWinCount + "!");
         } else if (playerWinCount < computerWinCount) {
             console.log("You lost by " + computerWinCount + " rounds to " + playerWinCount + ".");
         } else {
             console.log("Its a tie!");
-        }
+        }*/
 
     </script>
 </body>
