Disable buttons upon win/lose

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                 } else {
                     winMessage.textContent = "You lose! Better luck next time!";
                 }
+                rockButton.disabled = true;
+                paperButton.disabled = true;
+                scissorsButton.disabled = true;
             }
 
 
